--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
-    <title>Smile School</title>
+    <title>Get Schooled</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
-          
-            <ul>
-                <li><a href="#">COURSE</a></li>
-                <li><a href="#">PRICING</a></li>
-                <li><a href="#">LOGIN</a></li>
-            </ul>
-        </nav>
-        
-    </header>
-    <main>
-        <section>
-            <div>
-                <h1>Get schooled</h1>
-                <span>SMILES</span>
-                <span>GRIN</span>
-                <span>LAUGH</span>
-                <button>REGISTER FOR FREE</button>
+    <div class="hero container">
+        <header class="header">
+            <div class="logo">
+                <img src="Images/logo.png" alt="logo">
             </div>
+            <nav class="nav">
+                <!-- <ul> -->
+                    <a href="#" class="nav-link">COURSE</a>
+                    <a href="#" class="nav-link">PRICING</a>
+                    <a href="#" class="nav-link">LOGIN</a>   
+                <!-- </ul> -->  
+            </nav>
+
+        </header>
+        <main class="main-content">
+            <section>
+                <div>
+                    <h1 class="main-title">Get Schooled</h1>
+                    <div class="subtitle words">
+                        <span>SMILES</span>
+                        <span>GRIN</span>
+                        <span>LAUGH</span>
+                    </div>
+                    <button class="btn">REGISTER FOR FREE</button>
+                </div>
+            </section>
+        </main>
+        <section>
             <div>
                 <h2>Learn from the pros</h2>
                 <div>
