--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -8,7 +8,7 @@
     <title>Get Schooled</title>
 </head>
 <body>
-    <div class="hero container">
+    <div class="hero-container">
         <header class="header">
             <div class="logo">
                 <img src="Images/logo.png" alt="logo">
@@ -33,35 +33,43 @@
                     </div>
                     <button class="btn">REGISTER FOR FREE</button>
                 </div>
-            </section>
-        </main>
-        <section>
-            <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <div>
-                        <img src="./images/1 (3).png" alt="">
-                        <h3>Phillip Massey</h3>
-                        <p>« Smile of the year » 2018 - 2019</p>
+                <div class="learn-section">
+                    <h2 class="learn-title"><span class="purple">Learn</span> from the props</h2>
+                    <div class="instructors">
+                        <div class="instructor">
+                            <img src="Images/1.png" alt="">
+                            <h3 class="instructor-name">Phillip Massey</h3>
+                            <p class="instructor-title">« Smile of the year »</p>
+                            <p class="instructor-year"> 2018 - 2019</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="./images/6.png" alt="">
-                        <h3>Nannie Lawrence</h3>
-                        <p>Best « little smile » 2017</p>
+                    <div class="instructors">
+                        <div class="instructor">
+                            <img src="Images/3.png" alt="">
+                            <h3 class="instructor-name">Nannie Lawrence</h3>
+                            <p class="instructor-title">Best « little smile »</p>
+                            <p class="instructor-year"> 2017 </p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="./images/7.png" alt="">
-                        <h3>Bruce Walters</h3>
-                        <p>Best « Friend Smile » live performance 2019</p>
+                    <div class="instructors">
+                        <div class="instructor">
+                            <img src="Images/2.png" alt="">
+                            <h3 class="instructor-name">Bruce Walters</h3>
+                            <p class="instructor-title">Best «  Friend Smile »</p>
+                            <p class="instructor-year"> live performance 2019</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="./images/8.png" alt="">
-                        <h3>Henry Hughes</h3>
-                        <p>« 24h smiles » winner 2016 - 2019</p>
+                    <div class="instructors">
+                        <div class="instructor">
+                            <img src="Images/4.png" alt="">
+                            <h3 class="instructor-name">Henry Hughes</h3>
+                            <p class="instructor-title">«  24h smiles » winner</p>
+                            <p class="instructor-year"> 2016 - 2019</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
         <section>
             <div>
                 <img src="./images/Bitmap.png" alt="image">
