--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -3,75 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
-    <title>Get Schooled</title>
+    <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous">
+</script>
+    <link href="styles.css" rel="stylesheet">
+    <title>Smile School</title>
 </head>
 <body>
-    <div class="hero-container">
-        <header class="header">
-            <div class="logo">
-                <img src="Images/logo.png" alt="logo">
-            </div>
-            <nav class="nav">
-                <!-- <ul> -->
-                    <a href="#" class="nav-link">COURSE</a>
-                    <a href="#" class="nav-link">PRICING</a>
-                    <a href="#" class="nav-link">LOGIN</a>   
-                <!-- </ul> -->  
-            </nav>
+    <div class="Container">
+    <header>
+        <nav>
+            <img src="Images/logo.png" alt="logo">
+            <ul>
+                <li><a href="#">COURSE</a></li>
+                <li><a href="#">PRICING</a></li>
+                <li><a href="#">LOGIN</a></li>
+            </ul>
+        </nav>
 
-        </header>
-        <main class="main-content">
-            <section>
-                <div>
-                    <h1 class="main-title">Get Schooled</h1>
-                    <div class="subtitle words">
-                        <span>SMILES</span>
-                        <span>GRIN</span>
-                        <span>LAUGH</span>
-                    </div>
-                    <button class="btn">REGISTER FOR FREE</button>
-                </div>
-                <div class="learn-section">
-                    <h2 class="learn-title"><span class="purple">Learn</span> from the props</h2>
-                    <div class="instructors">
-                        <div class="instructor">
-                            <img src="Images/1.png" alt="">
-                            <h3 class="instructor-name">Phillip Massey</h3>
-                            <p class="instructor-title">« Smile of the year »</p>
-                            <p class="instructor-year"> 2018 - 2019</p>
-                        </div>
-                    </div>
-                    <div class="instructors">
-                        <div class="instructor">
-                            <img src="Images/3.png" alt="">
-                            <h3 class="instructor-name">Nannie Lawrence</h3>
-                            <p class="instructor-title">Best « little smile »</p>
-                            <p class="instructor-year"> 2017 </p>
-                        </div>
-                    </div>
-                    <div class="instructors">
-                        <div class="instructor">
-                            <img src="Images/2.png" alt="">
-                            <h3 class="instructor-name">Bruce Walters</h3>
-                            <p class="instructor-title">Best «  Friend Smile »</p>
-                            <p class="instructor-year"> live performance 2019</p>
-                        </div>
-                    </div>
-                    <div class="instructors">
-                        <div class="instructor">
-                            <img src="Images/4.png" alt="">
-                            <h3 class="instructor-name">Henry Hughes</h3>
-                            <p class="instructor-title">«  24h smiles » winner</p>
-                            <p class="instructor-year"> 2016 - 2019</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
+    </header>
+    <main class="Homepage">
         <section>
-            <div>
+            <div class="Homeschool">
+                <h1>Get schooled</h1>
+                <span>SMILES</span>
+                <span>GRIN</span>
+                <span>LAUGH</span>
+                <h2><button>REGISTER FOR FREE</button></h2>
+            </div>
+            <div class="learn-from-pros">
+                <h2><span>Learn</span> the pros</h2>
+                <div>
+                    <div>
+                        <img src="Images/1.png" alt="">
+                        <h3>Phillip Massey</h3>
+                        <p>« Smile of the year » 2018 - 2019</p>
+                    </div>
+                    <div>
+                        <img src="Images/3.png" alt="">
+                        <h3>Nannie Lawrence</h3>
+                        <p>Best « little smile » 2017</p>
+                    </div>
+                    <div>
+                        <img src="Images/2.png" alt="">
+                        <h3>Bruce Walters</h3>
+                        <p>Best «  Friend Smile » live performance 2019</p>
+                    </div>
+                    <div>
+                        <img src="Images/4.png" alt="">
+                        <h3>Henry Hughes</h3>
+                        <p>«  24h smiles » winner 2016 - 2019</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    </div>
                 <img src="./images/Bitmap.png" alt="image">
             </div>
             <div>
