--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -70,87 +70,85 @@
                 <P>weather presenter</P>
             </div>
         </section>
-        
-    </main>
-                <img src="./images/Bitmap.png" alt="image">
-            </div>
-            <div>
-                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
-                <P>weather presenter</P>
-            </div>
-        </section>
-        <section>
-            <h2>Most popular tutorials</h2>
-            <div>
-                <img src="./images/Bitmap (1).png" alt="">
+        <section class="tutorials">
+            <h2>Most <span>popular</span> tutorials</h2>
+            <div class="tutorials-container">
+                <div class="tutorial-card">
+                <img src="Images/9.png" alt="Diagonal Smile"/>
+                <div class="play-button"></div>
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1 (3).png" alt="">
+                <div class="author-info">
+                    <img src="Images/1.png" alt="Phillip Massey">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div>
+                <div class="ratings">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                 </div>
-                <p>8 min</p>
+                <p class="duration">8 min</p>
             </div>
-            <div>
-                <img src="./images/Bitmap (4).png" alt="">
-                <h3>Happy Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1 (3).png" alt="">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="./images/Bitmap (3).png" alt="">
-                <h3>Natural Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1 (3).png" alt="">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="./images/Bitmap (2).png" alt="">
+            <div class="tutorial-card">
+                <img src="Images/7.png" alt="Sad Smile">
+                <div class="play-button"></div>
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="./images/1 (3).png" alt="">
+                <div class="author-info">
+                    <img src="Images/1.png" alt="Phillip Massey">
                     <h4>Phillip Massey</h4>
                 </div>
-                <div>
+                <div class="ratings">
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                     <div><i class="fa-solid fa-star"></i></div>
                 </div>
-                <p>8 min</p>
+                <p class="duration">8 min</p>
             </div>
-        </section>
+            <div class="tutorial-card">
+                <img src="Images/8.png" alt="Natural Smile">
+                <div class="play-button"></div>
+                <h3>Natural Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div class="author-info">
+                    <img src="Images/1.png" alt="Phillip Massey">
+                    <h4>Phillip Massey</h4>
+                </div>
+                <div class="ratings">
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <p class="duration">8 min</p>
+            </div>
+            <div class="tutorial-card">
+                <img src="Images/6.png" alt="Happy Smile">
+                <div class="play-button"></div>
+                <h3>Happy Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div class="author-info">
+                    <img src="Images/1.png" alt="Phillip Massey">
+                    <h4>Phillip Massey</h4>
+            </div>
+            <div class="ratings">
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+                <div><i class="fa-solid fa-star"></i></div>
+            </div>
+            <p class="duration">8 min</p>
+        </div>
+        </div>
+    </section>
+
+    
         <section>
             <h2>Free membership</h2>
             <div>
