--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -147,32 +147,34 @@
         </div>
         </div>
     </section>
+    <section class="membership">
+        <h2><span>Free </span>membership</h2>
+        <div>
+        <div>
+            <img src="Images/smile.png" alt="">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img src="Images/smile.png" alt="">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img src="Images/smile.png" alt="">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div>
+            <img src="Images/smile.png" alt="">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        </div>
+        <button>REGISTER FOR FREE</button>
+    </section>
 
-    
-        <section>
-            <h2>Free membership</h2>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <button>REGISTER FOR FREE</button>
-        </section>
+
         <section>
             <h2>F.A.Q</h2>
             <div>
