--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -229,13 +229,12 @@ deserunt mollit anim id est laborum.
                 </div>
             </div>
         </div>      
-    </section>
-</main>
-  
+     </section>
+    </main>
     <footer>
-        <section>
+        <section class="footer">
             <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+                <img src="Images/logo.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
